infra/environments/staging-eks/k8s-templates/10-service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001
