infra/environments/staging-eks/k8s-templates/11-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: task-manager
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
